--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 {%- include snippets/get-nav-url.html path=_paths_rss -%}
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ __return }}">
 <!-- begin favicon -->
+
+<!-- old favicon
 {%- include snippets/prepend-baseurl.html path='/assets/apple-touch-icon.png' -%}
 <link rel="apple-touch-icon" sizes="180x180" href="{{ __return }}">
 
@@ -35,6 +37,18 @@
 {%- include snippets/prepend-baseurl.html path='/assets/browserconfig.xml' -%}
 <meta name="msapplication-config" content="{{ __return }}">
 
+<meta name="theme-color" content="#ffffff">
+
+-->
+
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/my_logo/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/my_logo/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/my_logo/favicon-16x16.png">
+<link rel="manifest" href="/assets/my_logo/site.webmanifest">
+<link rel="mask-icon" href="/assets/my_logo/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/assets/my_logo/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/assets/my_logo/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 <!-- end favicon -->
 
